--- a/my-cards/src/main/resources/application.properties
+++ b/my-cards/src/main/resources/application.properties
@@ -8,8 +8,19 @@ quarkus.swagger-ui.path=/my-cardsapi/swagger
 # configuracao do Stork
 consul.host=localhost
 consul.port=8500
-
 quarkus.stork.my-service.service-discovery.type=consul
 quarkus.stork.my-service.service-discovery.consul-host=localhost
 quarkus.stork.my-service.service-discovery.consul-port=8500
 quarkus.stork.my-service.load-balancer.type=round-robin
+
+# configuracao do traces
+quarkus.application.name=my-cards
+quarkus.otel.exporter.otlp.traces.endpoint=http://localhost:4317
+quarkus.otel.exporter.otlp.traces.headers=Authorization=Bearer my_secret
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
+
+# configuracao do log
+quarkus.log.handler.gelf.enabled=true
+quarkus.log.handler.gelf.host=localhost
+quarkus.log.handler.gelf.port=12501
+quarkus.log.handler.gelf.include-full-mdc=true
