--- a/my-cards/pom.xml
+++ b/my-cards/pom.xml
@@ -88,6 +88,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-opentelemetry</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-logging-gelf</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
